docs/content/gloo_routing/virtual_services/routes/route_destinations/direct_response_action/test-direct-response-vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: test-direct-response
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - 'foo'
    routes:
      - matcher:
          prefix: /
        directResponseAction:
          status: 200
          body: "Hello, world!"
